src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* Istok Web font 
Приклад використання:
<div className="font-istok">
  Цей текст буде відображатись шрифтом 'IstokWeb-Regular' або наступний доступним sans-serif шрифтом в списку.
</div>
*/
@font-face {
  font-family: "IstokWeb-Regular";
  src:
    url("./assets/fonts/Istok_Web/woff2/istokweb-regular-webfont.woff2") format("woff2"),
    url("./assets/fonts/Istok_Web/woff/istokweb-regular-webfont.woff") format("woff");
  font-weight: 400;
  font-stretch: normal;
  font-display: swap;
}

/* Proza Libre Regular font 
Приклад використання:
<div className="font-proza">
  Цей текст буде відображатись шрифтом 'ProzaLibre-Regular' або наступний доступним sans-serif шрифтом в списку.
</div>
*/
@font-face {
  font-family: "ProzaLibre-Regular";
  src:
    url("./assets/fonts/Proza_Libre/woff2/prozalibre-regular-webfont.woff2") format("woff2"),
    url("./assets/fonts/Proza_Libre/woff/prozalibre-regular-webfont.woff") format("woff");
  font-weight: 400;
  font-stretch: normal;
  font-display: swap;
}

/* Proza Libre Medium font 
Приклад використання:
<div className="font-proza-medium">
  Цей текст буде відображатись шрифтом 'ProzaLibre-Medium' або наступний доступним sans-serif шрифтом в списку.
</div>
*/
@font-face {
  font-family: "ProzaLibre-Medium";
  src:
    url("./assets/fonts/Proza_Libre/woff2/prozalibre-medium-webfont.woff2") format("woff2"),
    url("./assets/fonts/Proza_Libre/woff/prozalibre-medium-webfont.woff") format("woff");
  font-weight: 500;
  font-stretch: normal;
  font-display: swap;
}

/* Proza Libre SemiBold font 
Приклад використання:
<div className="font-proza-semibold">
  Цей текст буде відображатись шрифтом 'ProzaLibre-SemiBold' або наступний доступним sans-serif шрифтом в списку.
</div>
*/
@font-face {
  font-family: "ProzaLibre-SemiBold";
  src:
    url("./assets/fonts/Proza_Libre/woff2/prozalibre-semibold-webfont.woff2") format("woff2"),
    url("./assets/fonts/Proza_Libre/woff/prozalibre-semibold-webfont.woff") format("woff");
  font-weight: 600;
  font-stretch: normal;
  font-display: swap;
}

/* Proza Libre Bold font 
Приклад використання:
<div className="font-proza-bold">
  Цей текст буде відображатись шрифтом 'ProzaLibre-Bold' або наступний доступним sans-serif шрифтом в списку.
</div>
*/
@font-face {
  font-family: "ProzaLibre-Bold";
  src: url("./assets/fonts/Proza_Libre/woff2/prozalibre-bold-webfont.woff2") format("woff2");
  font-weight: 700;
  font-stretch: normal;
  font-display: swap;
}
html {
  scroll-behavior: smooth;
}

input[type="number"]::-webkit-inner-spin-button,
input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.primaryBtn {
  @apply flex items-center justify-center gap-[6px] rounded-[10px] border border-solid border-my-black5 px-[18px] py-[9px] font-istok text-[20px] font-bold leading-[32px] hover:bg-my-yellow hover:transition-all;
}

.label {
  @apply flex w-full flex-col items-start gap-[6px] p-0 font-istok text-[16px] font-normal leading-[22px];
}

.field {
  @apply min-h-[50px] w-full rounded-[10px] border border-solid border-my-black5 px-[18px] py-[14px] text-[20px] leading-[24px] placeholder:text-my-gray focus:border-my-yellow focus:outline-none;
}

.field-error {
  @apply absolute mt-[2px] text-[13px] text-red-600;
}

.auth-form {
  @apply flex w-[520px] flex-col gap-6 rounded-[24px] bg-my-lightblue p-10 shadow-md;
}

.active {
  @apply border-b-2 border-[#2355cc] text-[#2355cc];
}

.scrollbar,
.scrollbar-desktop {
  --thumb-color: #a6cae5;
  --track-color: #daefff;
}
.scrollbar {
  overflow-y: auto;
  overflow-x: hidden;
  scrollbar-color: auto !important;
}

/* ----------Desktop-------- */
@media (min-width: 1440px) {
  .scrollbar-desktop {
    overflow-y: auto;
    overflow-x: hidden;
    scrollbar-color: auto !important;
  }
}

/* Chrome, Safari, Edge */
@supports selector(::-webkit-scrollbar) {
  .scrollbar::-webkit-scrollbar {
    width: 7px;
  }
  @media (min-width: 1440px) {
    .scrollbar::-webkit-scrollbar,
    .scrollbar-desktop::-webkit-scrollbar {
      width: 8px;
    }
  }

  .scrollbar::-webkit-scrollbar-track,
  .scrollbar-desktop::-webkit-scrollbar-track {
    background: var(--track-color);
    border-radius: 12px;
    margin-block: 8px;
  }

  .scrollbar::-webkit-scrollbar-thumb,
  .scrollbar-desktop::-webkit-scrollbar-thumb {
    background: var(--thumb-color);
    border-radius: 12px;
  }
}

/* Firefox */
@-moz-document url-prefix() {
  .scrollbar,
  .scrollbar-desktop {
    scrollbar-width: thin;
    scrollbar-color: var(--thumb-color) var(--track-color) !important;
  }
}
/* ========================================== */
.contacts-form-wrapper::before {
  content: "";
  position: absolute;
  top: -25vw;
  left: 50%;
  transform: translateX(-50%);
  width: 100vw;
  height: 18vw;

  background-image: url("./assets/images/contacts/contacts_mobile1x.webp");

  background-repeat: no-repeat;
  background-position: center;
  background-size: 100%;
}

@media screen and (min-resolution: 1.5dppx), screen and (min-device-pixel-ratio: 2) {
  .contacts-form-wrapper::before {
    background-image: url("./assets/images/contacts/contacts_mobile2x.webp");
  }
}

@media only screen and (min-width: 768px) {
  .contacts-form-wrapper::before {
    display: none;
  }
}

/* ---------------------------------- */
.contacts-form-wrapper::after {
  content: "";
  position: absolute;
  bottom: -25vw;
  left: 50%;
  transform: translateX(-50%);
  width: calc(100vw - 18px);
  height: 18vw;

  background-image: url("./assets/images/contacts/contacts_2_mobile1x.webp");

  background-repeat: no-repeat;
  background-position: center;
  background-size: 100%;
}

@media screen and (min-resolution: 1.5dppx), screen and (min-device-pixel-ratio: 2) {
  .contacts-form-wrapper::after {
    background-image: url("./assets/images/contacts/contacts_2_mobile2x.webp");
  }
}

@media screen and (min-width: 768px) {
  .contacts-form-wrapper::after {
    height: 10vw;
    bottom: -15vw;
    background-image: url("./assets/images/contacts/contacts_2_tablet1x.webp");
  }

  @media screen and (min-resolution: 1.5dppx), screen and (min-device-pixel-ratio: 2) {
    .contacts-form-wrapper::after {
      background-image: url("./assets/images/contacts/contacts_2_tablet2x.webp");
    }
  }
}

@media screen and (min-width: 1440px) {
  .contacts-form-wrapper::after {
    height: 8vw;
    bottom: -11vw;
    background-image: url("./assets/images/contacts/contacts_2_desktop1x.webp");
  }

  @media screen and (min-resolution: 1.5dppx), screen and (min-device-pixel-ratio: 2) {
    .contacts-form-wrapper::after {
      background-image: url("./assets/images/contacts/contacts_2_desktop2x.webp");
    }
  }
}

/* ------------------------------------- */
.link-wrapper::before {
  content: "";
  position: absolute;
  top: -25vw;
  left: 50%;
  transform: translateX(-50%);
  width: calc(100vw - 18px);
  height: 11vw;

  background-image: url("./assets/images/footer/tape_1x_mob.webp");

  background-repeat: no-repeat;
  background-position: center;
  background-size: 100%;
}

@media screen and (min-resolution: 1.5dppx), screen and (min-device-pixel-ratio: 2) {
  .link-wrapper::before {
    background-image: url("./assets/images/footer/tape_2x_mob.webp");
  }
}

@media screen and (min-width: 768px) {
  .link-wrapper::before {
    top: -11vw;
    height: 4vw;
    background-image: url("./assets/images/footer/tape_1x_tablet.webp");
  }

  @media screen and (min-resolution: 1.5dppx), screen and (min-device-pixel-ratio: 2) {
    .link-wrapper::before {
      background-image: url("./assets/images/footer/tape_2x_tablet.webp");
    }
  }
}

@media screen and (min-width: 1440px) {
  .link-wrapper::before {
    top: -8vw;
    background-image: url("./assets/images/footer/tape_1x_desktop.webp");
  }

  @media screen and (min-resolution: 1.5dppx), screen and (min-device-pixel-ratio: 2) {
    .link-wrapper::before {
      background-image: url("./assets/images/footer/tape_2x_desktop.webp");
    }
  }
}

.custom-list li::before {
  content: "•";
  position: absolute;
  left: -18px;
  top: -3px;
  font-size: 20px;
}

@media screen and (min-width: 1440px) {
  .custom-list li::before {
    top: 3px;
  }
}

/* Styles carousel */
.slider-item-custom {
  height: 73px !important;
  width: 122px !important;
  display: flex !important;
  justify-content: center !important;
  align-items: center !important;
}

@media screen and (max-width: 767.98px) {
  .slider-custom {
    display: none;
  }
}

/* Pagination */
.page-link {
  @apply flex size-[44px] items-center justify-center rounded-full border border-[#2626265f] bg-transparent text-[18px] font-bold leading-[1.29] text-[#262626] transition duration-300;
}

.page-item.disabled .page-link,
.page-link:disabled {
  @apply border-[#262626] border-opacity-[5%] bg-transparent fill-[#2626267f] text-[#2626267f];
}

.page-item:not(.disabled):not(.selected):hover .page-link,
.page-item:not(.disabled):not(.selected):focus-visible .page-link {
  @apply border-transparent bg-[#c9dbe8];
}

.active-pg {
  @apply border-transparent bg-[#2356CC] text-white;
}

.help-modal::before {
  content: "";
  position: absolute;
  top: 5px;
  left: 0;

  background-image: url("./assets/images/libraryBooksQuotes/mobile/mob_1_1x.webp");

  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 100%;
  height: 312px;
}

@media screen and (min-resolution: 1.5dppx), screen and (min-device-pixel-ratio: 2) {
  .help-modal::before {
    background-image: url("./assets/images/libraryBooksQuotes/mobile/mob_1_2x.webp");
  }
}

@media screen and (min-width: 1440px) {
  .help-modal::before {
    top: -109px;
    transform: translateX(500px);

    background-image: url("./assets/images/libraryBooksQuotes/desktop/desk_1_1x.webp");
    width: 415px;
    height: 475px;
  }
}

@media screen and (min-resolution: 1.5dppx), screen and (min-device-pixel-ratio: 2) {
  .help-modal::before {
    background-image: url("assets/images/libraryBooksQuotes/desktop/desk_1_2x.webp");
  }
}

/* styles 404 */

@media screen and (min-width: 768px) {
  .not-found-section {
    background-image: url(" assets/images/not-found/notFound@1x_tablet.webp");
  }

  @media screen and (min-resolution: 1.5dppx), screen and (min-device-pixel-ratio: 2) {
    .not-found-section {
      background-image: url("assets/images/not-found/notFound@2x_tablet.webp");
    }
  }
}

@media screen and (min-width: 1440px) {
  .not-found-section {
    background-image: url("./assets/images/not-found/notFound@1x_desktop.webp");
  }

  @media screen and (min-resolution: 1.5dppx), screen and (min-device-pixel-ratio: 2) {
    .not-found-section {
      background-image: url("./assets/images/not-found/notFound@2x_desktop.webp");
    }
  }
}

.decoration-lines {
  background-image: url("./assets/images/not-found/decorationLines@1x_tablet.webp");
}

@media screen and (min-resolution: 1.5dppx), screen and (min-device-pixel-ratio: 2) {
  .decoration-lines {
    background-image: url("./assets/images/not-found/decorationLines@2x_tablet.webp");
  }
}

@media screen and (min-width: 768px) {
  .decoration-lines {
    background-image: url("./assets/images/not-found/decorationLines@1x_desktop.webp");
  }

  @media screen and (min-resolution: 1.5dppx), screen and (min-device-pixel-ratio: 2) {
    .decoration-lines {
      background-image: url("./assets/images/not-found/decorationLines@1x_desktop.webp");
    }
  }
}

input:-webkit-autofill,
textarea:-webkit-autofill {
  -webkit-box-shadow: 0 0 0px 1000px #fff inset;
  box-shadow: 0 0 0px 1000px #fff inset;
  -webkit-text-fill-color: #1e1e1e !important;
}

input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
textarea:-webkit-autofill:hover,
textarea:-webkit-autofill:focus {
  -webkit-box-shadow: 0 0 0px 1000px #fff inset;
  box-shadow: 0 0 0px 1000px #fff inset;
  -webkit-text-fill-color: #1e1e1e !important;
}

.no-scroll {
  overflow: hidden;
}

